# conda-oci-mirror

./: ..gitignore.un~  .gitignore  .pre-commit-config.yaml  .setup.cfg.un~  LICENSE  LICENSE.rst  README.md  TODO.md  environment.yml  pixi.toml  pyproject.toml  run_registry.sh  setup.cfg
.github/workflows/: build.yml  main.yaml  pypi.yml  update-lockfiles.yml
conda_oci_mirror/: cache_packages.py  cli.py  constants.py  decorators.py  defaults.py  functions.py  helpers.py  layer.py  logger.py  mirror.py  oci.py  oci_mirror.py  oras.py  package.py  rate_limited_pool.py  repo.py  subdir_accessor.py  tasks.py  util.py
conda_oci_mirror.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
conda_oci_mirror/tests/: conftest.py  helpers.py  test_mirror.py  test_package.py  test_package_repo.py  test_pushpull_cache.py  test_repo.py  test_repodata.json
setup.prettier-write/: sets-uo-rake.i
tests/: conftest.py  test_package_repo.py
