[metadata]
name = conda_oci_mirror
version = attr: conda_oci_mirror.__version__
description = Tools to mirror conda packages to an OCI registry.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
author = QuantStack
author_email = info@quantstack.net
platforms = Linux, Mac OS X, Windows
keywords = mamba, conda, oci
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    click
    build

[options.entry_points]
console_scripts =
    conda-oci = conda_oci_mirror.cli:main
